--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "lint-staged": "^15.1.0",
     "prettier": "3.1.0",
     "typescript": "^5.3.2",
-    "vite": "^5.0.0"
+    "vite": "^5.3.1"
   },
   "lint-staged": {
     "**/*": "prettier . --write --ignore-unknown"
+  },
+  "dependencies": {
+    "bulma": "^1.0.1",
+    "navigo": "^8.11.1",
+    "nouislider": "^15.8.1"
   }
 }
